# SafeCUDA

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STYLEGUIDE.md  paper.bib  paper.md  test_output
.github/workflows/: draft-pdf.yml
examples/: CMakeLists.txt  bounds_check.cu  example.cpp  kernel.cu  kernel1.cu  kernel2.cu  montecarlo.cu  out_of_bounds.cu  safecache.cu  safecache.cuh
examples/include/: version.h
include/: memtable.h  safecache.cuh  safecuda.cuh  safecuda.h  version.h.in
perf_tests/: build_perf.sh  perf1.cpp  perf1.cu  perf2.cpp  perf2.cu  perf3.cpp  perf3.cu  perf4.cpp  perf4.cu  perf5.cpp  perf5.cu  perf6.cpp  perf6.cu  plot.py  run_perf.py  run_perf.sh
perf_tests/output/: perf_summary_stats.csv
scripts/: apply_math_fix.sh  build.sh  build_and_run_example.sh  build_and_test.sh  build_and_test_example.sh  build_example.sh  cuda_math_fix.patch  enable_pre_commit_hook.sh  format.sh  test.sh
src/: memtable.cpp  safecache.cu  safecuda.cpp  safecuda.cu  test_preload.cpp
tests/: CMakeLists.txt
tests/include/: sf_nvcc_parsing_tests.h  test_cuda_linking.cuh  test_cuda_linking.h  test_safecuda_runtime.cuh  test_safecuda_runtime.h  test_sf_nvcc_parsing.h  test_sf_nvcc_pattern_matcher.h  test_sf_nvcc_ptx_injector.h
tests/src/: bootstrap_test.cpp  sf_nvcc_parsing_tests.cpp  test_cuda_linking.cpp  test_cuda_linking.cu  test_preload.cpp  test_preload.cu  test_safecuda_runtime.cpp  test_safecuda_runtime.cu  test_sf_nvcc_parsing.cpp  test_sf_nvcc_pattern_matching.cpp  test_sf_nvcc_ptx_injector.cpp
tools/: CMakeLists.txt
tools/sf-nvcc/: CMakeLists.txt
tools/sf-nvcc/include/: nvcc_wrapper.h  pattern_matcher.h  ptx_data.h  ptx_modifier.h  sf_options.h
tools/sf-nvcc/src/: main.cpp  nvcc_wrapper.cpp  pattern_matcher.cpp  ptx_modifier.cpp  sf_options.cpp
tools/sf-nvcc/text/: help.txt
